<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eOrder</string>
    <string name="welcome">Welcome to</string>
    <string name="enter_button">Enter</string>
    <string name="return_button">Return</string>
    <string name="title_tables">Select Table</string>
    <string name="sync_info">Please wait while loading data...</string>
    <string name="menu_check_history_orders">Check History Orders</string>
    <string name="menu_sync_tables_status">Sync Tables Status</string>
    <string name="menu_sync_server_data">Sync Server Data</string>
    <string name="title_context_menu">View or Sync</string>
    <string name="info_sync_success">Sync Data Successfully</string>
    <string name="info_sync_failure">Sync Data Failed</string>
    <string name="dish_title">Menu</string>
    <string name="text_orderedlist_button">Check Order</string>
    <string name="history_order_item">%1$d:  bill of table %2$d is CNY %3$d</string>
    <string name="history_orders_title">History Orders</string>
    <string name="no_history_orders">No Orders</string>
    <string name="ok">OK</string>
    <string name="check">Check</string>
    <string name="cart_name">Table %1$d order detail</string>
    <string name="total_price">Total: CNY %1$d</string>
    <string name="dish_name">Name: </string>
    <string name="dish_price">Price: </string>
    <string name="dish_introduction">Introduction: </string>
    <string name="dish_return">Return</string>
    <string name="app_dish_introduction">Dish Introduction</string>
    <string name="cart_title">Cart</string>
    <string name="change_order">Change Order</string>
    <string name="app_menus">Menus</string>
    <string name="menus_price">Price: CNY %1$d</string>
    <string name="menus_copy">Amount: %1$d Copy</string>
    <string name="menus_copies">Amount: %1$d Copies</string>
    <string name="warning_emptyorder">Sorry but please select at least one dish!</string>
    <string name="title_image">Image</string>
    <string name="title_dish_name">Dish Name</string>
    <string name="title_price">Price</string>
    <string name="title_amount">Amount</string>
    <string name="submit_warning">Are you sure you want to submit the order?</string>
    <string name="submit_yes">Yes</string>
    <string name="submit_no">No</string>
    <string name="submit_no_dish">No Dish</string>
</resources>
