<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/order_bg">

    <TextView
        android:id="@+id/cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/cart_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/total_dish_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_name"
        android:paddingLeft="10dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_dish_count"
        android:paddingLeft="10dp"
        android:text="@string/total_price"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="60dp"
        android:layout_gravity="center">

        <Button
            android:text="@string/check"
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:textSize="15sp" />

        <Button
            android:text="@string/ok"
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textSize="15sp" />
    </LinearLayout> 

    <ListView
        android:id="@+id/menus_order_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:layout_below="@id/total_price"
        android:layout_above="@id/button_layout" />

</RelativeLayout>
