<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/dish_name"/>
	            <TextView 
	                android:id="@+id/dish_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_price"
                    android:textColor="@android:color/black"/>
	            <TextView
	                android:id="@+id/dish_price"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@android:color/black"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/dish_select_unselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_introduction"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/dish_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_return"
        android:onClick="onReturn"
        android:gravity="center"
        android:layout_marginLeft="120dip"
        android:layout_marginBottom="10dip"/>
</LinearLayout>
