<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:id="@+id/above_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <ImageView 
            android:id="@+id/dish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>
        <LinearLayout
            android:id="@+id/dishname_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/dish_image"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp">
            <TextView 
                android:text="@string/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
            <TextView 
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
       </LinearLayout>
       <LinearLayout
            android:id="@+id/dishprice_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/dish_image"
            android:layout_below="@id/dishname_layout"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_price"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/dish_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </LinearLayout>
       <CheckBox
            android:id="@+id/dish_select_unselect"
            android:layout_toRightOf="@id/dish_image"
            android:layout_below="@id/dishprice_layout"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="150dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_below="@id/above_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_introduction"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/dish_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>
